fixed cutoff repo button when header collapsed

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -619,7 +619,7 @@ hr {
   @include shadow(2);
   -webkit-transition: all .25s ease-in-out;
   transition: all .25s ease-in-out;
-  padding: 16px 12px 16px 12px;
+  padding: 12px 12px 16px 12px;
   width: 100%;
   color: $white;
   display: -webkit-box;
